<package>
  <name>ros_vcpkg</name>
  <version>0.0.1</version>
  <description>The package provides the handy setup for vcpkg.</description>
  <maintainer email="seanyen@microsoft.com">Sean Yen</maintainer>
  <license>MIT</license>

  <build_depend>vcpkg</build_depend>
  <run_depend>vcpkg</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
